--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,7 +18,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./frontend/*"]
+    }
   },
   "include": ["vite.config.ts"]
 }
