--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,11 @@ tokio = { version = "1.44.2", features = ["full"] }
 uuid = { version = "1.16.0", features = ["v4"] }
 validator = { version = "0.20.0", features = ["derive"] }
 validator_derive = "0.20.0"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
+debug = false
