feat: Redesigned session system, changed redis to use async instead of blocking function, and added some boilerplate home UI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,8 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    },
-    "strictNullChecks": true
+      "@/*": ["./frontend/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
