--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ governor = "0.10.0"
 jsonwebtoken = "9.3.1"
 ntex = { version = "2.12.4", features = ["tokio"] }
 rand = "0.9.1"
-redis = "0.30.0"
+redis = { version = "0.30.0", features = ["tokio-comp"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
 thiserror = "2.0.12"
