--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "frontend/app/globals.css",
+    "css": "frontend/styles/globals.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
